# in-hand-rotation-mjlab

./: .gitignore  .gitmodules  LICENSE  PIPELINE.md  QUICKSTART.md  README.md  pyproject.toml
real_world/: Dockerfile  README.md  config.py  deploy.py  docker-compose.yml  hand_interface.py  leap_hand_interface.py  random_leap_policy.py  sysid_collect.py
scripts/: collect_hand_cube_grasp_cache.py  list_envs.py  play.py  policy_server_zmq.py  record_replay_trajectory.py  replay_server_zmq.py  sim2sim.py  sysid_fit_from_log.py  train.py
src/in_hand_rotation_mjlab/: __init__.py
src/in_hand_rotation_mjlab/policy_server/: __init__.py  actions.py  bootstrap.py  config.py  contracts.py  loader.py  observation.py  policy_server.py  replay.py  replay_server.py  wire.py  zmq_transport.py
src/in_hand_rotation_mjlab/robots/: __init__.py
src/in_hand_rotation_mjlab/sim2sim/: __init__.py  native_mujoco_runner.py  policy.py  runtime.py
src/in_hand_rotation_mjlab/sim2sim/native/: __init__.py  actions.py  client.py  config.py  observations.py  runner.py  state.py
src/in_hand_rotation_mjlab/sim2sim/native/plugins/: __init__.py  base.py  hand_cube.py  registry.py
src/in_hand_rotation_mjlab/tasks/: __init__.py
src/in_hand_rotation_mjlab/tasks/hand_cube/: hand_cube_env_cfg.py
src/in_hand_rotation_mjlab/tasks/hand_cube/cache/: leap_left_custom_grasp_cache.npz  leap_left_grasp_cache.npz
src/in_hand_rotation_mjlab/tasks/hand_cube/mdp/: __init__.py  actions.py  commands.py  curriculums.py  events.py  metrics.py  numerics.py  observations.py  rewards.py  terminations.py
(+9 files in other folders)
